--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                 <div class="blog__item">
                     <div class="blog__header">
                         <a href="#">
-                            <img class="blog__photo" src="img/blog1.png" alt="">
+                            <img class="blog__photo" src="assets/images/blog/1.jpg" alt="">
                         </a>
                         <div class="blog__date">
                             <div class="blog__date-day">15</div>
