--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:300i,400,700&amp;subset=cyrillic-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Mogo</title>
 </head>
 <body>
@@ -15,7 +17,7 @@
 <header class="header" id="header">
     <div class="container">
         <div class="header__inner">
-            <div class="header__logo" data-scroll="#intro">MoGo</div>
+            <div class="header__logo animate__animated animate__flipInX" data-scroll="#intro">MoGo</div>
 
             <nav class="nav" id="nav">
                 <a class="nav__link" href="#" data-scroll="#about">About</a>
@@ -45,8 +47,8 @@
     <div class="intro" id="intro">
         <div class="container">
             <div class="intro__inner">
-                <h2 class="intro__suptitle">Creative Template</h2>
-                <h1 class="intro__title">Welcome to MoGo</h1>
+                <h2 class="intro__suptitle animate__animated animate__flipInX">Creative Template</h2>
+                <h1 class="intro__title animate__animated animate__flipInX">Welcome to MoGo</h1>
 
                 <a class="btn" href="#">Learn More</a>
             </div>
@@ -83,15 +85,15 @@
         <div class="container">
 
             <div class="section__header">
-                <h3 class="section__suptitle">What we do</h3>
-                <h2 class="section__title">Story about us</h2>
-                <div class="section__text">
+                <h3 class="section__suptitle animate__animated animate__zoomIn">What we do</h3>
+                <h2 class="section__title animate__animated animate__zoomIn">Story about us</h2>
+                <div class="section__text animate__animated animate__zoomIn">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
 
             <div class="card">
-                <div class="card__item">
+                <div class="card__item animate__animated animate__fadeInBottomLeft">
                     <div class="card__inner">
                         <div class="card__img">
                             <img src="assets/images/about/1.jpg" alt="">
@@ -100,7 +102,7 @@
                     </div>
                 </div>
 
-                <div class="card__item">
+                <div class="card__item animate__animated animate__fadeInUp">
                     <div class="card__inner">
                         <div class="card__img">
                             <img src="assets/images/about/2.jpg" alt="">
@@ -109,7 +111,7 @@
                     </div>
                 </div>
 
-                <div class="card__item">
+                <div class="card__item animate__animated animate__fadeInBottomRight">
                     <div class="card__inner">
                         <div class="card__img">
                             <img src="assets/images/about/3.jpg" alt="">
@@ -159,42 +161,42 @@
         <div class="container">
 
             <div class="section__header">
-                <h3 class="section__suptitle">We work with</h3>
-                <h2 class="section__title">Amazing Services</h2>
+                <h3 class="section__suptitle animate__animated animate__zoomIn">We work with</h3>
+                <h2 class="section__title animate__animated animate__zoomIn">Amazing Services</h2>
             </div>
 
             <div class="services">
-                <div class="services__item  services__item--border">
+                <div class="services__item  services__item--border animate__animated animate__zoomIn" >
                     <img class="services__icon" src="assets/images/services/photography.png" alt="">
 
                     <div class="services__title">Photography</div>
                     <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
                 </div>
-                <div class="services__item  services__item--border">
+                <div class="services__item  services__item--border animate__animated animate__zoomIn">
                     <img class="services__icon" src="assets/images/services/webdesign.png" alt="">
 
                     <div class="services__title">Web Design</div>
                     <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
                 </div>
-                <div class="services__item  services__item--border">
+                <div class="services__item  services__item--border animate__animated animate__zoomIn">
                     <img class="services__icon" src="assets/images/services/creativity.png" alt="">
 
                     <div class="services__title">Creativity</div>
                     <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
                 </div>
-                <div class="services__item">
+                <div class="services__item animate__animated animate__zoomIn">
                     <img class="services__icon" src="assets/images/services/seo.png" alt="">
 
                     <div class="services__title">seo</div>
                     <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
                 </div>
-                <div class="services__item">
+                <div class="services__item animate__animated animate__zoomIn">
                     <img class="services__icon" src="assets/images/services/css-html.png" alt="">
 
                     <div class="services__title">Css/Html</div>
                     <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
                 </div>
-                <div class="services__item">
+                <div class="services__item animate__animated animate__zoomIn">
                     <img class="services__icon" src="assets/images/services/digital.png" alt="">
 
                     <div class="services__title">digital</div>
@@ -211,8 +213,8 @@
         <div class="container">
 
             <div class="section__header">
-                <h3 class="section__suptitle">For all devices</h3>
-                <h2 class="section__title">Unique design</h2>
+                <h3 class="section__suptitle animate__animated animate__zoomIn">For all devices</h3>
+                <h2 class="section__title animate__animated animate__zoomIn">Unique design</h2>
             </div>
 
             <div class="devices">
@@ -229,22 +231,22 @@
         <div class="container">
 
             <div class="section__header">
-                <h3 class="section__suptitle">Service</h3>
-                <h2 class="section__title">what we do</h2>
-                <div class="section__text">
+                <h3 class="section__suptitle animate__animated animate__zoomIn">Service</h3>
+                <h2 class="section__title animate__animated animate__zoomIn">what we do</h2>
+                <div class="section__text animate__animated animate__zoomIn">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
 
             <div class="wedo">
                 <div class="wedo__item">
-                    <img class="wedo__img" src="assets/images/wedo.jpg" alt="">
+                    <img class="wedo__img animate__animated animate__slideInLeft " src="assets/images/wedo.jpg" alt="">
                 </div>
 
                 <div class="wedo__item">
 
                     <div class="accordion">
-                        <div class="accordion__item" data-collapse="#wedo_1">
+                        <div class="accordion__item animate__animated animate__slideInRight" data-collapse="#wedo_1">
                             <div class="accordion__header">
                                 <img class="accordion__icon" src="assets/images/services/photography.png" alt="">
                                 <div class="accordion__title">Photography</div>
@@ -254,7 +256,7 @@
                             </div>
                         </div>
 
-                        <div class="accordion__item active" data-collapse="#wedo_2">
+                        <div class="accordion__item active animate__animated animate__slideInRight" data-collapse="#wedo_2">
                             <div class="accordion__header">
                                 <img class="accordion__icon" src="assets/images/services/creativity.png" alt="">
                                 <div class="accordion__title">Creativity</div>
@@ -264,7 +266,7 @@
                             </div>
                         </div>
 
-                        <div class="accordion__item" data-collapse="#wedo_3">
+                        <div class="accordion__item animate__animated animate__slideInRight" data-collapse="#wedo_3">
                             <div class="accordion__header">
                                 <img class="accordion__icon" src="assets/images/services/webdesign.png" alt="">
                                 <div class="accordion__title">web design</div>
