--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
         <div class="container">
 
             <div class="section__header">
-                <h3 class="section__suptitle">Who we are</h3>
-                <h2 class="section__title">Meet our team</h2>
-                <div class="section__text">
+                <h3 class="section__suptitle animate__animated animate__zoomIn">Who we are</h3>
+                <h2 class="section__title animate__animated animate__zoomIn">Meet our team</h2>
+                <div class="section__text animate__animated animate__zoomIn">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
@@ -459,9 +459,9 @@
     <section class="section" id="works">
         <div class="container">
             <div class="section__header">
-                <h3 class="section__suptitle">What we do</h3>
-                <h2 class="section__title">some of our work</h2>
-                <div class="section__text">
+                <h3 class="section__suptitle animate__animated animate__zoomIn">What we do</h3>
+                <h2 class="section__title animate__animated animate__zoomIn">some of our work</h2>
+                <div class="section__text animate__animated animate__zoomIn">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
@@ -571,7 +571,7 @@
             </div>
 
             <div class="clients">
-                <div class="clients__item">
+                <div class="clients__item animate__animated animate__slideInRight">
                     <img class="clients__photo" src="assets/images/clients/1.png" alt="">
                     <div class="clients__content">
                         <div class="clients__name">Matthew Dix</div>
@@ -580,7 +580,7 @@
                     </div>
                 </div>
 
-                <div class="clients__item">
+                <div class="clients__item animate__animated animate__slideInLeft">
                     <img class="clients__photo" src="assets/images/clients/2.png" alt="">
                     <div class="clients__content">
                         <div class="clients__name">Nick Karvounis</div>
@@ -589,7 +589,7 @@
                     </div>
                 </div>
 
-                <div class="clients__item">
+                <div class="clients__item animate__animated animate__slideInRight">
                     <img class="clients__photo" src="assets/images/clients/3.png" alt="">
                     <div class="clients__content">
                         <div class="clients__name">Jaelynn Castillo </div>
@@ -598,7 +598,7 @@
                     </div>
                 </div>
 
-                <div class="clients__item">
+                <div class="clients__item animate__animated animate__slideInLeft">
                     <img class="clients__photo" src="assets/images/clients/4.png" alt="">
                     <div class="clients__content">
                         <div class="clients__name">Mike Petrucci</div>
@@ -617,13 +617,13 @@
         <div class="container">
 
             <div class="section__header">
-                <h3 class="section__suptitle">Our stories</h3>
-                <h2 class="section__title">Latest blog</h2>
+                <h3 class="section__suptitle animate__animated animate__zoomIn">Our stories</h3>
+                <h2 class="section__title animate__animated animate__zoomIn">Latest blog</h2>
             </div>
 
             <div class="blog">
-                <div class="blog__item">
-                    <div class="blog__header">
+                <div class="blog__item animate__animated animate__fadeInBottomRight">
+                    <div class="blog__header animate__animated animate__fadeInBottomRight">
                         <a href="#">
                             <img class="blog__photo" src="assets/images/blog/1.jpg" alt="">
                         </a>
@@ -632,13 +632,13 @@
                             Jan
                         </div>
                     </div>
-                    <div class="blog__content">
+                    <div class="blog__content animate__animated animate__fadeInBottomRight">
                         <div class="blog__title">
                             <a href="#">Lorem ipsum dolor sit amet</a>
                         </div>
                         <div class="blog__text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
                     </div>
-                    <div class="blog__footer">
+                    <div class="blog__footer animate__animated animate__fadeInBottomRight">
                         <div class="blog-stat">
                             <span class="blog-stat__item">
                                 <i class="far fa-eye"></i> 542
@@ -650,7 +650,7 @@
                     </div>
                 </div>
 
-                <div class="blog__item">
+                <div class="blog__item animate__animated animate__fadeInBottomLeft">
                     <div class="blog__header">
                         <a href="#">
                             <img class="blog__photo" src="assets/images/blog/2.jpg" alt="">
@@ -678,7 +678,7 @@
                     </div>
                 </div>
 
-                <div class="blog__item">
+                <div class="blog__item animate__animated animate__fadeInBottomRight">
                     <div class="blog__header">
                         <a href="#">
                             <img class="blog__photo" src="assets/images/blog/3.jpg" alt="">
@@ -688,13 +688,13 @@
                             Jan
                         </div>
                     </div>
-                    <div class="blog__content">
+                    <div class="blog__content animate__animated animate__fadeInBottomRight">
                         <div class="blog__title">
                             <a href="#">Lorem ipsum dolor sit amet</a>
                         </div>
                         <div class="blog__text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
                     </div>
-                    <div class="blog__footer">
+                    <div class="blog__footer animate__animated animate__fadeInBottomRight">
                         <div class="blog-stat">
                             <span class="blog-stat__item">
                                 <i class="far fa-eye"></i> 542
