--- a/index.html
+++ b/index.html
@@ -728,8 +728,8 @@
     <footer class="footer" id="footer">
         <div class="container">
 
-            <div class="footer__inner">
-                <div class="footer__col  footer__col--first">
+            <div class="footer__inner ">
+                <div class="footer__col  footer__col--first animate__animated animate__fadeInLeftBig">
                     <div class="footer__logo">MoGo</div>
                     <div class="footer__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
 
@@ -760,7 +760,7 @@
                 <div class="footer__col  footer__col--second">
                     <div class="footer__title">Blogs</div>
 
-                    <div class="blogs">
+                    <div class="blogs animate__animated animate__fadeInUp">
                         <div class="blogs__item">
                             <img class="blogs__img" src="assets/images/blog/1.jpg" alt="">
                             <div class="blogs__content">
@@ -790,7 +790,7 @@
                 <div class="footer__col  footer__col--third">
                     <div class="footer__title">Instagram</div>
 
-                    <div class="instagram">
+                    <div class="instagram animate__animated animate__fadeInRightBig ">
                         <a class="instagram__item" href="#" target="_blank">
                             <img src="assets/images/instagram/1.jpg" alt="">
                         </a>
