js fade away added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+   
     <title>Mogo</title>
 </head>
 <body>
@@ -44,7 +45,7 @@
 <div class="page">
 
     <!-- Intro -->
-    <div class="intro" id="intro">
+    <div class="intro " id="intro">
         <div class="container">
             <div class="intro__inner">
                 <h2 class="intro__suptitle animate__animated animate__flipInX">Creative Template</h2>
@@ -81,7 +82,7 @@
 
 
     <!-- About -->
-    <section class="section" id="about">
+    <section class="section anim" id="about">
         <div class="container">
 
             <div class="section__header">
@@ -126,7 +127,7 @@
 
 
     <!-- Statistics -->
-    <div class="statistics">
+    <div class="statistics anim">
         <div class="container">
 
             <div class="stat">
@@ -157,7 +158,7 @@
 
 
     <!-- Services -->
-    <section class="section" id="services">
+    <section class="section anim" id="services">
         <div class="container">
 
             <div class="section__header">
@@ -209,7 +210,7 @@
 
 
     <!-- Devices -->
-    <section class="section  section--devices">
+    <section class="section anim section--devices">
         <div class="container">
 
             <div class="section__header">
@@ -227,7 +228,7 @@
 
 
     <!-- Wedo -->
-    <section class="section">
+    <section class="section anim">
         <div class="container">
 
             <div class="section__header">
@@ -285,7 +286,7 @@
 
 
     <!-- Reviews 1 -->
-    <div class="section  section--gray">
+    <div class="section anim section--gray">
         <div class="container">
 
             <div class="reviews">
@@ -313,7 +314,7 @@
 
 
     <!-- Team -->
-    <section class="section">
+    <section class="section anim">
         <div class="container">
 
             <div class="section__header">
@@ -427,7 +428,7 @@
 
 
     <!-- Logos -->
-    <div class="section  section--gray">
+    <div class="section  section--gray anim">
         <div class="container">
 
             <div class="logos">
@@ -456,7 +457,7 @@
 
 
     <!-- Works -->
-    <section class="section" id="works">
+    <section class="section anim" id="works">
         <div class="container">
             <div class="section__header">
                 <h3 class="section__suptitle animate__animated animate__zoomIn">What we do</h3>
@@ -533,7 +534,7 @@
 
 
     <!-- Reviews 2 -->
-    <div class="section">
+    <div class="section anim">
         <div class="container">
 
             <div class="reviews">
@@ -562,7 +563,7 @@
 
 
     <!-- Clients -->
-    <section class="section  section--clients">
+    <section class="section anim section--clients">
         <div class="container">
 
             <div class="section__header">
@@ -613,7 +614,7 @@
 
 
     <!-- Blog -->
-    <section class="section" id="blog">
+    <section class="section anim" id="blog">
         <div class="container">
 
             <div class="section__header">
@@ -712,7 +713,7 @@
 
 
     <!-- Map -->
-    <section class="section  section--map">
+    <section class="section anim section--map">
         <div class="container">
             <div class="map">
                 <h2 class="map__title">
@@ -725,7 +726,7 @@
 
 
     <!-- Footer -->
-    <footer class="footer" id="footer">
+    <footer class="footer anim" id="footer">
         <div class="container">
 
             <div class="footer__inner ">
@@ -833,7 +834,7 @@
 </div><!-- /.page -->
 
 
-
+<script src="assets/js/anim.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="assets/js/app.js"></script>
