--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 
 
     <!-- About -->
-    <section class="section anim" id="about">
+    <section class="section" id="about">
         <div class="container">
 
-            <div class="section__header">
+            <div class="section__header anim">
                 <h3 class="section__suptitle animate__animated animate__zoomIn">What we do</h3>
                 <h2 class="section__title animate__animated animate__zoomIn">Story about us</h2>
                 <div class="section__text animate__animated animate__zoomIn">
@@ -93,9 +93,9 @@
                 </div>
             </div>
 
-            <div class="card">
-                <div class="card__item animate__animated animate__fadeInBottomLeft">
-                    <div class="card__inner">
+            <div class="card anim ">
+                <div class="card__item animate__animated animate__fadeInBottomLeft ">
+                    <div class="card__inner ">
                         <div class="card__img">
                             <img src="assets/images/about/1.jpg" alt="">
                         </div>
@@ -158,15 +158,15 @@
 
 
     <!-- Services -->
-    <section class="section anim" id="services">
+    <section class="section" id="services">
         <div class="container">
 
-            <div class="section__header">
+            <div class="section__header anim">
                 <h3 class="section__suptitle animate__animated animate__zoomIn">We work with</h3>
                 <h2 class="section__title animate__animated animate__zoomIn">Amazing Services</h2>
             </div>
 
-            <div class="services">
+            <div class="services anim">
                 <div class="services__item  services__item--border animate__animated animate__zoomIn" >
                     <img class="services__icon" src="assets/images/services/photography.png" alt="">
 
@@ -210,7 +210,7 @@
 
 
     <!-- Devices -->
-    <section class="section anim section--devices">
+    <section class="section section--devices anim">
         <div class="container">
 
             <div class="section__header">
@@ -286,7 +286,7 @@
 
 
     <!-- Reviews 1 -->
-    <div class="section anim section--gray">
+    <div class="section section--gray">
         <div class="container">
 
             <div class="reviews">
@@ -314,10 +314,10 @@
 
 
     <!-- Team -->
-    <section class="section anim">
+    <section class="section">
         <div class="container">
 
-            <div class="section__header">
+            <div class="section__header anim">
                 <h3 class="section__suptitle animate__animated animate__zoomIn">Who we are</h3>
                 <h2 class="section__title animate__animated animate__zoomIn">Meet our team</h2>
                 <div class="section__text animate__animated animate__zoomIn">
@@ -326,9 +326,9 @@
             </div>
 
             <div class="card">
-                <div class="card__item">
+                <div class="card__item anim">
                     <div class="card__inner">
-                        <div class="card__img">
+                        <div class="card__img ">
                             <img src="assets/images/team/1.jpg" alt="">
                         </div>
                         <div class="card__text">
@@ -348,7 +348,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card__info">
+                    <div class="card__info ">
                         <div class="card__name">Matthew Dix</div>
                         <div class="card__prof">Graphic Design</div>
                     </div>
@@ -357,7 +357,7 @@
 
 
 
-                <div class="card__item">
+                <div class="card__item anim">
                     <div class="card__inner">
                         <div class="card__img">
                             <img src="assets/images/team/2.jpg" alt="">
@@ -389,7 +389,7 @@
 
 
 
-                <div class="card__item">
+                <div class="card__item anim">
                     <div class="card__inner">
                         <div class="card__img">
                             <img src="assets/images/team/3.jpg" alt="">
@@ -428,10 +428,10 @@
 
 
     <!-- Logos -->
-    <div class="section  section--gray anim">
+    <div class="section  section--gray">
         <div class="container">
 
-            <div class="logos">
+            <div class="logos anim">
                 <div class="logos__item">
                     <img class="logos__img" src="assets/images/logos/1.png" alt="">
                 </div>
@@ -457,9 +457,9 @@
 
 
     <!-- Works -->
-    <section class="section anim" id="works">
+    <section class="section" id="works">
         <div class="container">
-            <div class="section__header">
+            <div class="section__header anim">
                 <h3 class="section__suptitle animate__animated animate__zoomIn">What we do</h3>
                 <h2 class="section__title animate__animated animate__zoomIn">some of our work</h2>
                 <div class="section__text animate__animated animate__zoomIn">
@@ -469,7 +469,7 @@
         </div>
 
         <div class="works">
-            <div class="works__col">
+            <div class="works__col anim">
                 <div class="works__item">
                     <img class="works__image" src="assets/images/works/1.jpg" alt="">
                     <div class="works__info">
@@ -486,7 +486,7 @@
                 </div>
             </div>
 
-            <div class="works__col">
+            <div class="works__col anim">
                 <div class="works__item">
                     <img class="works__image" src="assets/images/works/3.jpg" alt="">
                     <div class="works__info">
@@ -503,7 +503,7 @@
                 </div>
             </div>
 
-            <div class="works__col">
+            <div class="works__col anim">
                 <div class="works__item">
                     <img class="works__image" src="assets/images/works/5.jpg" alt="">
                     <div class="works__info">
@@ -513,7 +513,7 @@
                 </div>
             </div>
 
-            <div class="works__col">
+            <div class="works__col anim">
                 <div class="works__item">
                     <img class="works__image" src="assets/images/works/6.jpg" alt="">
                     <div class="works__info">
@@ -534,14 +534,14 @@
 
 
     <!-- Reviews 2 -->
-    <div class="section anim">
+    <div class="section">
         <div class="container">
 
-            <div class="reviews">
+            <div class="reviews ">
 
                 <div data-slider>
                     <div>
-                        <div class="reviews__item">
+                        <div class="reviews__item ">
                             <img class="reviews__photo" src="assets/images/avatar.png" alt="">
                             <div class="reviews__text">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</div>
                             <div class="reviews__author">Jon Doe</div>
@@ -563,45 +563,45 @@
 
 
     <!-- Clients -->
-    <section class="section anim section--clients">
+    <section class="section section--clients">
         <div class="container">
 
-            <div class="section__header">
+            <div class="section__header anim">
                 <h3 class="section__suptitle">Happy Clients</h3>
                 <h2 class="section__title">What people say</h2>
             </div>
 
             <div class="clients">
-                <div class="clients__item animate__animated animate__slideInRight">
-                    <img class="clients__photo" src="assets/images/clients/1.png" alt="">
-                    <div class="clients__content">
+                <div class="clients__item animate__animated animate__slideInLeft">
+                    <img class="clients__photo anim" src="assets/images/clients/1.png" alt="">
+                    <div class="clients__content anim">
                         <div class="clients__name">Matthew Dix</div>
                         <div class="clients__prof">Graphic Design</div>
                         <div class="clients__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</div>
                     </div>
                 </div>
 
-                <div class="clients__item animate__animated animate__slideInLeft">
-                    <img class="clients__photo" src="assets/images/clients/2.png" alt="">
-                    <div class="clients__content">
+                <div class="clients__item animate__animated animate__slideInRight">
+                    <img class="clients__photo anim" src="assets/images/clients/2.png" alt="">
+                    <div class="clients__content anim">
                         <div class="clients__name">Nick Karvounis</div>
                         <div class="clients__prof">Graphic Design</div>
                         <div class="clients__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</div>
                     </div>
                 </div>
 
-                <div class="clients__item animate__animated animate__slideInRight">
-                    <img class="clients__photo" src="assets/images/clients/3.png" alt="">
-                    <div class="clients__content">
+                <div class="clients__item animate__animated animate__slideInLeft">
+                    <img class="clients__photo anim" src="assets/images/clients/3.png" alt="">
+                    <div class="clients__content anim">
                         <div class="clients__name">Jaelynn Castillo </div>
                         <div class="clients__prof">Graphic Design</div>
                         <div class="clients__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</div>
                     </div>
                 </div>
 
-                <div class="clients__item animate__animated animate__slideInLeft">
-                    <img class="clients__photo" src="assets/images/clients/4.png" alt="">
-                    <div class="clients__content">
+                <div class="clients__item animate__animated animate__slideInRight">
+                    <img class="clients__photo anim" src="assets/images/clients/4.png" alt="">
+                    <div class="clients__content anim">
                         <div class="clients__name">Mike Petrucci</div>
                         <div class="clients__prof">Graphic Design</div>
                         <div class="clients__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</div>
@@ -614,17 +614,17 @@
 
 
     <!-- Blog -->
-    <section class="section anim" id="blog">
+    <section class="section" id="blog">
         <div class="container">
 
-            <div class="section__header">
+            <div class="section__header anim">
                 <h3 class="section__suptitle animate__animated animate__zoomIn">Our stories</h3>
                 <h2 class="section__title animate__animated animate__zoomIn">Latest blog</h2>
             </div>
 
-            <div class="blog">
+            <div class="blog anim">
                 <div class="blog__item animate__animated animate__fadeInBottomRight">
-                    <div class="blog__header animate__animated animate__fadeInBottomRight">
+                    <div class="blog__header  animate__animated animate__fadeInBottomRight">
                         <a href="#">
                             <img class="blog__photo" src="assets/images/blog/1.jpg" alt="">
                         </a>
@@ -713,9 +713,9 @@
 
 
     <!-- Map -->
-    <section class="section anim section--map">
+    <section class="section section--map">
         <div class="container">
-            <div class="map">
+            <div class="map anim">
                 <h2 class="map__title">
                     <div><i class="fas fa-map-marker-alt"></i></div>
                     <a href="https://goo.gl/maps/F8YpeCGqwrG2" target="_blank">Open Map</a>
@@ -726,19 +726,19 @@
 
 
     <!-- Footer -->
-    <footer class="footer anim" id="footer">
+    <footer class="footer" id="footer">
         <div class="container">
 
             <div class="footer__inner ">
                 <div class="footer__col  footer__col--first animate__animated animate__fadeInLeftBig">
-                    <div class="footer__logo">MoGo</div>
-                    <div class="footer__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                    <div class="footer__logo anim">MoGo</div>
+                    <div class="footer__text anim">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
 
-                    <div class="footer__social">
+                    <div class="footer__social anim">
                         <div class="footer__social-header">
                             <b>15k</b> followers
                         </div>
-                        <div class="footer__social-content">
+                        <div class="footer__social-content anim">
                             Follow Us:
                             <a href="#" target="_blank">
                                 <i class="fab fa-facebook"></i>
@@ -752,13 +752,13 @@
                         </div>
                     </div>
 
-                    <form class="subscribe" action="/" method="post">
+                    <form class="subscribe anim" action="/" method="post">
                         <input class="subscribe__input" type="email" name="name" placeholder="Your Email...">
                         <button class="subscribe__btn" type="submit">Subscribe</button>
                     </form>
                 </div><!-- /.footer__col -->
 
-                <div class="footer__col  footer__col--second">
+                <div class="footer__col anim footer__col--second">
                     <div class="footer__title">Blogs</div>
 
                     <div class="blogs animate__animated animate__fadeInUp">
@@ -788,7 +788,7 @@
                     </div><!-- /.blogs -->
                 </div>
 
-                <div class="footer__col  footer__col--third">
+                <div class="footer__col anim footer__col--third">
                     <div class="footer__title">Instagram</div>
 
                     <div class="instagram animate__animated animate__fadeInRightBig ">
